--- a/t3/packages/server/package.json
+++ b/t3/packages/server/package.json
@@ -3,17 +3,22 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "dev": "ts-node-dev src/index.ts"
+    "dev": "ts-node-dev src/index.ts",
+    "seed": "ts-node src/seed.ts"
   },
   "dependencies": {
-    "express": "^4.17.1",
+    "@prisma/client": "^6.16.2",
     "@trpc/server": "^10.38.4",
-    "zod": "^3.22.2",
-    "cors": "^2.8.5"
+    "cors": "^2.8.5",
+    "express": "^4.17.1",
+    "node-fetch": "^3.3.2",
+    "zod": "^3.22.2"
   },
   "devDependencies": {
     "@types/express": "^4.17.17",
     "@types/node": "^20.6.2",
+    "@types/node-fetch": "^2.6.13",
+    "prisma": "^6.16.2",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.2.2"
   }
